add_executable (common_test common.c)
target_link_libraries (common_test sophia)
add_test (common common_test)
add_executable (crash_test crash.c)
target_link_libraries (crash_test sophia)
add_test (crash crash_test)
add_executable (i_test i.c)
target_link_libraries (i_test sophia)
add_test (i i_test)
add_executable (limit_test limit.c)
target_link_libraries (limit_test sophia)
add_test (limit limit_test)
add_executable (merge_test merge.c)
target_link_libraries (merge_test sophia)
add_test (merge merge_test)
add_executable (recover_test recover.c)
target_link_libraries (recover_test sophia)
add_test (recover recover_test)
